# multi_sender

./: LICENSE  README.md  api.py  c1.py  c2.py  c3.py  config.py  main.py  pyproject.toml  utils.py
apps/: models.py
apps/clock/: api.py
apps/control/: api.py
apps/mail/: api.py
scripts/: test_clients.py
services/: lamport_clock.py  nodes_api.py  utils.py  websocket_manager.py
static/: styles.css
templates/: index.html
